# QDocx

./: .gitignore  CMakeLists.txt  LICENSE  QDocx.rar  README.md  qdocx.cpp
apps/report-studio/: CMakeLists.txt  main.cpp
cmake/: QDocxConfig.cmake.in
docs/: new-design.md  qt6-environment.md  zh-cn-usage.md
examples/basic/: CMakeLists.txt  main.cpp
include/: qdocx.h
include/QDocx/: QDocx  qdocxdocument.h  qdocxglobal.h  qdocxresult.h  qdocxstyle.h  qdocxtable.h
src/: qdocx.h  qdocxdocument.cpp  qdocxresult.cpp  qdocxtable.cpp
src/word/: qdocxwordbackend.cpp  qdocxwordbackend.h
tests/manual-report/: CMakeLists.txt  main.cpp
